--- a/setup.cfg
+++ b/setup.cfg
@@ -31,10 +31,12 @@ project_urls =
 [options]
 packages = find:
 install_requires =
+    napari
     numpy
     magicgui
     qtpy
     scikit-image
+    napari-itk-io
 
 python_requires = >=3.8
 include_package_data = True
