--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ repos:
       - id: trailing-whitespace
         exclude: ^\.napari-hub/.*
       - id: check-yaml # checks for correct yaml syntax for github actions ex.
-  - repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.1.11
-    hooks:
-      - id: ruff
+  # - repo: https://github.com/charliermarsh/ruff-pre-commit
+  #   rev: v0.1.11
+  #   hooks:
+  #     - id: ruff
   - repo: https://github.com/psf/black
     rev: 23.12.1
     hooks:
