--- a/src/napari_potential_field_navigation/napari.yaml
+++ b/src/napari_potential_field_navigation/napari.yaml
@@ -6,42 +6,16 @@ visibility: public
 categories: ["Annotation", "Segmentation", "Acquisition"]
 contributions:
   commands:
-    - id: napari-potential-field-navigation.open_samples
-      python_name: napari_potential_field_navigation._sample_data:open_samples
+    - id: napari-potential-field-navigation.lung_samples
+      python_name: napari_potential_field_navigation._sample_data:open_lung_samples
       title: Open image and label samples for the Diff APF plugin
-    - id: napari-potential-field-navigation.get_reader
-      python_name: napari_potential_field_navigation._reader:napari_get_reader
-      title: Open data with Differentiable Potential Field Navigation
-    - id: napari-potential-field-navigation.write_multiple
-      python_name: napari_potential_field_navigation._writer:write_multiple
-      title: Save multi-layer data with Differentiable Potential Field Navigation
-    - id: napari-potential-field-navigation.write_single_image
-      python_name: napari_potential_field_navigation._writer:write_single_image
-      title: Save image data with Differentiable Potential Field Navigation
-    - id: napari-potential-field-navigation.make_sample_data
-      python_name: napari_potential_field_navigation._sample_data:make_sample_data
-      title: Load sample data from Differentiable Potential Field Navigation
     - id: napari-potential-field-navigation.make_diff_apf_widget
       python_name: napari_potential_field_navigation:DiffApfWidget
       title: Navigate in medical images using differentiable potential fields
-  readers:
-    - command: napari-potential-field-navigation.get_reader
-      accepts_directories: false
-      filename_patterns: ['*.npy']
-  writers:
-    - command: napari-potential-field-navigation.write_multiple
-      layer_types: ['image*','labels*']
-      filename_extensions: []
-    - command: napari-potential-field-navigation.write_single_image
-      layer_types: ['image']
-      filename_extensions: ['.npy']
   sample_data:
-    - command: napari-potential-field-navigation.make_sample_data
-      display_name: Differentiable Potential Field Navigation
+    - command: napari-potential-field-navigation.lung_samples
+      display_name: Lung Samples
       key: unique_id.1
-    - command: napari-potential-field-navigation.open_samples
-      display_name: Image / Label Samples
-      key: unique_id.2
   widgets:
     - command: napari-potential-field-navigation.make_diff_apf_widget
-      display_name: Diff APF
+      display_name: DiffAPF
