doc: user manual

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = napari-potential-field-navigation
 
-description = A simple plugin for trajectories visualisations in napari for lung navigation in CTs scans
+description = A simple plugin for generating and visualizing trajectories in napari for lung navigation in CT scans
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/rcremese/napari-potential-field-navigation
